Fixed some text visibility problems

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -6,6 +6,7 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    text-shadow: black 0px 0px 10px;
   }
   
   h1 {
